# matbii

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.txt  mkdocs.yml  pyproject.toml  setup.py  versions.json
0.0.10/: 404.html  index.html  objects.inv  sitemap.xml
0.0.10/advanced/: index.html
0.0.10/getting_started/: index.html
0.0.10/reference/: index.html
0.0.10/search/: search_index.json
0.0.3/: 404.html  index.html  objects.inv  sitemap.xml
0.0.3/configuration_default/: index.html
0.0.3/configuration_doc/: index.html
0.0.3/reference/: index.html
0.0.3/resource_management_config/: index.html
0.0.3/search/: search_index.json
0.0.3/system_monitoring_config/: index.html
0.0.3/tracking_config/: index.html
0.0.4/: 404.html  index.html  objects.inv  sitemap.xml
0.0.4/getting_started/: index.html
0.0.4/reference/: index.html
0.0.4/search/: search_index.json
0.0.7/: 404.html  index.html  sitemap.xml
0.0.7/advanced/: index.html
0.0.7/getting_started/: index.html
0.0.7/reference/: index.html
0.0.7/search/: search_index.json
0.0.8/: 404.html  index.html  objects.inv  sitemap.xml
0.0.8/advanced/: index.html
0.0.8/getting_started/: index.html
0.0.8/reference/: index.html
docs/: architecture(draft).drawio  configuration_default.md  configuration_doc.md  index.md  resource_management_config.md  system_monitoring_config.md  tracking_config.md
docs/advanced/: custom_entry_points.md  custom_tasks.md  index.md  temp.md
docs/getting_started/: configuration.md  experiments.md  eye_tracking.md  index.md  key-concepts.md  logging.md  post-analysis.md  resource_management_config.md  system_monitoring_config.md  test.md  tracking_config.md
docs/tasks/: index.md
example/: config_default.json  experiment-C.json  experiment-n.json  experiment.json
example/experiment-A/: experiment-A-config.json  experiment.json  resource_management.json  resource_management.sch  system_monitoring.json  system_monitoring.sch  tracking.json  tracking.sch
example/experiment-B/: experiment-B-config.json  resource_management.sch  system_monitoring.sch
example/experiment-C/: experiment-C-config.json  system_monitoring.json  system_monitoring.sch  tracking.sch
example/experiment-system-monitoring-only/: experiment.json  system_monitoring.json  system_monitoring.sch
example/experiment-tracking-only/: experiment.json  tracking.json  tracking.sch
example/only-tracking/: experiment.json
matbii/: __init__.py  __main__.py  _const.py  action.py  ambient.py  environment.py  error.py  main.py  server.py
matbii/action/: __init__.py  task_resource_management.py  task_system_monitoring.py  task_tracking.py
matbii/agent/: __init__.py  avatar.py  matbii_agent.py  sensor.py
matbii/avatar/: __init__.py  avatar_actuator.py  exit_actuator.py
matbii/config/: __init__.py
matbii/environment/: __init__.py
matbii/example/: README.md
matbii/extras/: __init__.py  scripts.py
matbii/guidance/: __init__.py  agent_base.py  agent_default.py  sensor_guidance.py  sensor_resource_management.py  sensor_system_monitoring.py  sensor_tracking.py
matbii/tasks/: __init__.py  config.schema.json
scripts/: README.md  reconstruct.py  stats.py  svg_view.py  test.html  test.json
static/: default_schedule.sch  index.html.jinja  index.svg.jinja  matbii.json  matbii.svg.jinja  svgsocket.js
test/: actuator_schedule.sch  test.py  test_actuator_schedule.py  test_cerberus.py  test_configuration.py  test_deepmerge.py  test_pump_transfer.py  test_stub.py  test_svg_task_loader.py
(+250 files in other folders)
